# fuse-archive

./: .clang-format  .gitignore  AGENTS.md  AUTHORS  CMakeLists.txt  CONTRIBUTORS  DEVELOPMENT.md  INSTALL.md  Makefile  README.md  REFACTORING_PLAN.md  TODO.md  build.sh  fuse-archive.1  fuse-archive.cc  release.py
.allstar/: binary_artifacts.yaml
.github/workflows/: build-and-release.yml
lib/: common.cc  common.h  file_descriptor.cc  file_descriptor.h  fuse_ops.cc  fuse_ops.h  hashed_string.cc  hashed_string.h  node.cc  node.h  path.cc  path.h  reader.cc  reader.h  tree.cc  tree.h  util.cc  util.h
src/: main.cc
test/: asyncprogress-manual-test.sh  generate_attr_tar.sh  make_big_zip.py  make_collisions.py  make_deep.py  make_many_nodes.py  make_overflow_offset.py  test.py  unit_tests.cc
test/data/: README.md  archive.7z.gpg  archive.cbr  archive.cbz  archive.rpm  archive.spm  archive.tar.asc  archive.tar.b64  archive.tar.br  archive.tar.gpg  archive.tar.lz4  archive.tar.pgp  archive.tar.zst  archive.tbz  archive.tgz  archive.tlz4  archive.tlzo  archive.txz  archive.zip.gpg  archive.zip.pgp  archive.zip.rar  as-i-was-going-to-st-ives.tar.bz2  dot-slash-foo.tar  empty.tgz  encrypted-solidly.7z  hardlinks.tar  hardlinks.tgz  hi.txt.b64.b64  lz_is_lzip.tlz  lz_is_lzma.tlz  many-xattrs.tar  permissions.tar  permissions.tgz  romeo.txt.Z  romeo.txt.asc  romeo.txt.base64  romeo.txt.br.b64  romeo.txt.bz  romeo.txt.gpg  romeo.txt.gz.uu  (+8 more)
test/go/: check.go
test/mnt/: placeholder.txt
tests/: make_many_nodes.py  test.py  unit_tests.cc
tests/data/: --help  .gitignore  (+30 more)
